<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/exerciseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/weight" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/reps" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/rpe" />
    </LinearLayout>
</LinearLayout>
